@@ -239,6 +239,7 @@ TD, P
    margin: 25px;
    background-color: #808080;
  }
+
 .popuphead  /* controls the title and background */ 
  {
    text-align:center;
@@ -252,6 +253,7 @@ TD, P
    border-right: 1px solid #000000;
    background-color: #c0c0c0;
  }
+
 .popup /* controls the main text and message body */
  {
    text-align:center;
@@ -263,6 +265,7 @@ TD, P
    background-color: #ffffff;
    margin-bottom: 10px;  
  }
+
 .popupform /* controls form textarea */
  {
    font-size: 12px;
