@@ -173,16 +173,10 @@ a:hover {
 	  border-bottom-width:0px;
 	  border-right-width:0px;
 	}
+
 .fineprint                      /* used for fine print */
 	{
 	  font-size: 10px;
-	}
-.popuphead
-	{ font-size: 16px;
-	  background-color: #FCFCF3; padding:5px; font-weight: bold;
-	  -Moz-Border-Radius: 20px;
-	  text-align: center;
-	  padding: 5px; margin: 10px;
 	}
 
 input, select, option, textarea
@@ -190,11 +184,6 @@ input, select, option, textarea
 	  background-color: #FCFCFF; padding-left:5px; -Moz-Border-Radius: 20px;
 	}
 
-.popup
-	{
-	  font-size: 12px;
-	  text-align: center;
-	}
 
 .editlink                       /* Used for the [edit] tags */
 	{
@@ -215,11 +204,32 @@ input, select, option, textarea
 .search                          /* used in search text */
 	{ 
 	  font-size: 10px; 
-	  font-weight: boldi; 
+	  font-weight: boldi;
 	}
 
-.popupcontent  /* the content in the popup */
+.popupbody  /* controls the background of popup. */
 	{
-	  padding: 10px;
+	  margin: 25px;
+	  background-color: #808080;
+	  font-size: 12px; font-weight: none;
+ }
+
+.popuphead
+	{ 
+	  font-size: 16px; font-weight:bold;
+	  text-align: center;
+	  background-color: #FCFCF3;
+	  -Moz-Border-Radius: 20px;
+	  padding: 5px; margin: 10px;
+	  border-width: 1px; border-color: black; border-style:solid;
 	}
+
+.popup /* controls the main text and message body */
+ {
+   padding: 5px;
+ }
+
+.popupform /* controls form textarea */
+ {
+ }
 
