@@ -1,3 +1,13 @@
+2004-08-30  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b142
+
+	* Change: Content of popup for uploading photos is not hardcode centered.
+
+	* Change: No Alttext "No Caption", when Picture has no caption. RFE #962176.
+
+	* Change: HTML Output beautify for add_photos form.
+
+	* Change: Update Jenskin.
+
 2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b141
 
 	* Fix: Shorttags in watermark_album 
